# kanchuki

./: .env.example  .gitignore  .npmrc  CLAUDE.md  README.md  biome.json  nixpacks.toml  package.json  pnpm-lock.yaml  progress.md  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml  deploy.yml  docker-tryon.yml
.serena/: project.yml
apps/api/: package.json  railway.json  tsconfig.json
apps/mobile/: app.json  metro.config.js  package.json  tsconfig.json  vitest.config.ts
apps/web/: next.config.mjs  next.config.ts  package.json  railway.json  tailwind.config.ts
docs/: AI Fashion Sales Assistant - Phase 1.md  API.md  DATABASE.md  DEPLOY.md  DESIGN.md  MEMORY.md  PLAN.md  PRO-REQUIREMENTS.md  PROGRESS.md  Retailer → Customer AI Fashion Commerce Platform.md  SECURITY.md  SKILLS-AND-MCP.md  TECH-STACK.md  TRAINING.md  final-research.md
docs/adrs/: ADR-006-defer-3d-parametric-vto.md
scripts/: catalog-import-e2e.ts  catalog-import-route-e2e.ts  cleanup-all-data.ts  cleanup-test-data.ts  comprehensive-test.ts  create-catalog-grid.ts  create_test_image.py  e2e-test.ts  email-field-e2e.ts  full-workflow-test.ts  measurement_extractor.py  product-e2e.ts  run-e2e.sh  search-test.ts  seed-credits.ts  test-2piece-tryon.mjs  test_tagging.sh
scripts/dataset/: collector.py  generate_masks.py  prepare_dataset.py  requirements.txt
scripts/training/: README.md  accelerate_config.yaml  (+4 more)
services/fashion-vtone/fashion-tryon-main/backend/: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
services/fashion-vtone/fashion-tryon-main/backend/src/: main.py
(+169 files in other folders)
